Fix roomlist overflow

--- a/src/layout/RoomList/style.css
+++ b/src/layout/RoomList/style.css
@@ -1,6 +1,6 @@
 #roomList {
 	width: 100%;
-	height: 100%;
+	height: 500px;
 	background-color: #1d506d;
 	overflow: scroll;
 	font-family: 'Open Sans', sans-serif;
